app/assets/stylesheets/site.sass
$footer-height: 72px

html, body
  height: 100%

#content-wrapper
  min-height: 100%
  height: auto
  margin: 0 auto (-$footer-height)
  padding: 0 0 $footer-height

nav
  padding-left: 0

.btn
  .glyphicon
    margin: 0 10px

#results
  margin: 5px 0
  position: relative

  #results-canvas
    width: 170px
    height: 170px
    margin: 0 auto

  .results-description
    .caption
      margin: 3px 0
      font-weight: bold

      &.result-caption
        color: #18bc9c

      &.total-caption
        color: #1e2a36

.schedules-url-group
  margin-bottom: 20px

.course-btn
  margin: 0 5px 5px 0
  padding: 5px

  &.active
    border: 1px solid #18bc9c
    background-color: #18bc9c

#trimester-panel-group
  margin-bottom: 20px

  .trimester-panel-heading
    padding: 0

    .panel-title
      a
        display: block
        padding: 10px 15px

  .trimester-panel-body
    padding: 0

  .bachelor-item
    padding: 3px
    border: none

    .bachelor-btn
      display: block
      width: 100%
      padding: 5px

.filters
  .panel-body
    padding-top: 0

    .filter
      margin-top: 20px

      .filter-heading
        label
          font-weight: normal

      .filter-label
        padding: 5px 10px 0 10px

    .leaves-filter
      .filter-body
        .leaves-list
          padding: 0 15px

          .leave-row
            margin-bottom: 10px
            padding: 0 12px

            .col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12
              padding: 0 2px
.outputs
  .panel-body
    padding: 0

    .output-list
      margin: 0

      .output-type
        .checkbox
          padding-top: 0

footer
  height: $footer-height
  margin-top: 20px
  padding: 10px 0
  background-color: #ecf0f1

  .row
    margin: 5px 0

    .col-xs-12
      text-align: center

